<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ride My Spot</string>
    <string name="site_name">www.ridemyspot.com</string>
    <string name="support_mail">support@ridemyspot.com</string>
    <string name="contact_mail">contact@ridemyspot.com</string>
    
	<string name="text_valider">Valider</string>
	<string name="text_annuler">Annuler</string>
	<string name="text_information">Information</string>
	<string name="text_next">Suivant</string>
	<string name="text_profil">Profil</string>
	<string name="text_update">Mettre à jour</string>
	<string name="text_parameters">Paramètres</string>
	<string name="text_help_tutorial">Aide et Tutoriel</string>
	<string name="text_disclaimer">Avertissement</string>
	
	<string name="text_roller">Roller</string>
	<string name="text_skatepark">Skatepark</string>
	<string name="text_skate">Skate</string>
	<string name="text_bmx">BMX</string>
	<string name="text_favorite">Favoris</string>
	<string name="text_scooter">Trottinette</string>
	
	<string name="text_long_distance">km</string>
	<string name="text_small_distance">m</string>
 
    <string-array name="navigation_drawer_menu">
		<item>Profil</item>
		<!--<item>Paramètres</item>-->
		<item>Aides/Tutoriel</item>
		<item>Mentions légales</item>
		<item>Contacter le Support</item>
    </string-array>
	<!-- other idea for drawer
	infos appli, Mes Favoris, mes commentaires, mes spots
    -->
	<integer-array name="navigation_drawer_menu_drawable">
		<item>@drawable/ic_action_user</item>
		<!--<item>@drawable/ic_setting_dark</item>-->
		<item>@drawable/ic_action_video</item>
		<item>@drawable/ic_action_paste</item>
		<item>@drawable/ic_action_mail</item>
	</integer-array>

	<!-- Info mail -->
	<string name="choose_mail">Choisissez votre application mail :</string>
	<string name="subject_mail">[Android] Report</string>
	<string name="message_mail">To support@ridemyspot.com,\n\nMerci pour votre report, veuillez indiquer votre message : \n\n</string>

    <!-- SplashScreenActivity -->
	<string name="splashscreen_rms_button">Créer un compte Ride My Spot</string>
	<string name="splashscreen_already_button">J\'ai déjà un compte</string>
	<string name="splashscreen_text">Veuillez patienter&#8230;</string>

	<!-- DisclaimerDialog -->
	<string name="disclaimer_text">Ceci est la version Alpha de Ride My Spot.\n\nC\'est donc une application en cours de développement.\nVous êtes libre de nous laisser vos commentaires ou encore de nous remonter des bugs via le bouton de menu \"Contacter le support\".\n\nMerci pour vos retours en espérant que l\'application vous plaise.\n\nBon ride. ;)\n\nps : désolé pour la publiciter c\'est le seul moyen pour payer les serveurs et garder l\'application gratuite.</string>

	<!-- ParametersDialog -->
	<string name="parameters_geolocalisation">Géolocalisation</string>

	<!-- Help/TutoDialog -->
	<string name="help_tutorial_description">Le menu d\'aide vous permet de rejouer des tutoriels et vous indique des actuces pour utiliser l\'application</string>
	<string name="help_tutorial_replay_text">Choisissez le tutoriel que vous souhaitez rejouer :</string>
	<string name="help_tutorial_replay_map">- Carte</string>
	<string name="help_tutorial_replay_list">- Liste</string>

	<!-- AddUserDialog -->
	<string name="add_user_title">Bienvenue</string>
	<string name="add_user_title_already_signin">Bienvenue</string>
	<string name="add_user_description">Veuillez renseigner les champs suivant afin d\'accèder à l\'application</string>
	<string name="add_user_description_already_signin">Veuillez renseigner l\'email avec lequel vous vous êtes authentifié</string>
	<string name="add_user_login">Login :</string>
	<string name="add_user_email">Email :</string>
	<string name="add_user_type">Discipline pratiquée :</string>
	<string name="add_user_minimum_name">\n- Entrer un nom d\'au moins 3 caractères</string>
	<string name="add_user_minimum_type">\n- Sélectionner une discipline</string>
	<string name="add_user_minimum_mail">\n- Format email incorrect</string>
	<string name="add_user_minimum_error_text">Vous devez renseigner tous les champs :</string>
	<string name="add_user_loading_error">Une erreur est survenue pendant l\'ajout de votre profil!</string>
	<string name="add_user_already_error">Un utilisateur existe déjà avec cet email!</string>
	<string name="add_user_already_loading_error">Une erreur est survenue pendant la récupération de votre profil!</string>
	<string name="add_user_loading_error_log">Exception in insertUsers service</string>
    
    <!-- MapActivity -->
    <string name="menu_maps_add">Ajouter un spot au centre de la carte</string>
    <string name="menu_maps_refresh">Actualiser</string>
    <string name="menu_maps_list">Liste</string>
    
    <string name="maps_loading_spot_error">Une erreur est survenue pendant la récupération des spots!</string>
    <string name="maps_loading_spot_error_log">Exception in listSpots service</string>
    
    <!-- MapActivity ListFilter -->
    <string name="text_all_spot">Tous les Spots</string>
    <string-array name="maps_filter_list">
        <item>Roller</item>
        <item>Skate</item>
        <item>BMX</item>
        <item>Skatepark</item>
        <item>Favoris</item>
    </string-array>

	<!-- MapActivity HelpOverlay -->
	<string name="maps_help_popup_title">Tutoriel</string>
	<string name="maps_help_popup_description">Voulez vous voir le tutoriel?</string>
	<string name="maps_help_popup_addspot_description">Vous pouvez aussi ajouter un spot où vous le souhaitez en laissant votre doigt appuyé plus de 3 secondes sur la carte.\nVoulez vous essayer?</string>
	<string name="maps_help_home_title">Bouton Home</string>
	<string name="maps_help_home_description">Ce bouton vous permet d\'accèder au menu de navigation.</string>
	<string name="maps_help_geoloc_title">Géolocalisation</string>
	<string name="maps_help_geoloc_description">Ce bouton vous permet de recentrer la carte sur votre position GPS.</string>
	<string name="maps_help_filter_title">Filtre</string>
	<string name="maps_help_filter_description">Déroulez la liste pour choisir les types de spots que vous souhaitez voir apparaître sur la carte.</string>
	<string name="maps_help_refresh_title">Rafraîchissement</string>
	<string name="maps_help_refresh_description">Ce bouton vous permet de rafraîchir la liste de spot.</string>
	<string name="maps_help_addspot_title">Ajouter un spot</string>
	<string name="maps_help_addspotmenu_description">Ce bouton vous permet d\'ajouter un spot au centre de la carte.</string>
	<string name="maps_help_addspot_description">Cliquez sur le marqueur qui vient d\'apparaître pour accèder à l\'écran d\'ajout de spot.</string>
	<string name="maps_help_listmenu_title">Liste de spot</string>
	<string name="maps_help_listmenu_description">Ce bouton vous permet d\'accèder à l\'écran des spots sous forme de liste.</string>

	<!-- ListSpotActivity -->
	<string name="menu_list_map">Carte</string>
	<string name="menu_list_sort">Trier la liste</string>
    
    <!-- ListSpotActivity ListFilter -->
    <string name="string_sort_name">Nom de Spot</string>
    <string name="string_sort_note">Note Globale</string>
    <string name="string_sort_nb_note">Nombre de Note</string>
    <string name="string_sort_distance">Distance</string>
    <string name="string_sort_fav">Favoris</string>
    
	<!-- AddSpotActivity -->
	<string name="add_spot_map_info">Vous pouvez déplacer le point par appui long sur celui ci</string>
	<string name="add_spot_name">Entrer un nom (min. 10 caractères)</string>
	<string name="add_spot_radio">Type de spot :</string>
	<string name="add_spot_description">Entrez votre description (min. 20 caractères)</string>
	
	<string name="add_spot_minimum_name"> Minimum 10 caractères pour le nom</string>
	<string name="add_spot_minimum_type"> Renseigner le type du spot</string>
	<string name="add_spot_minimum_description"> Minimum 20 caractères pour la description</string>
	<string name="add_spot_minimum_rating"> Renseigner une note</string>
	<string name="add_spot_minimum_error_text">Vous devez renseigner tous les champs :</string>
	
	<string name="add_spot_loading">Ajout du spot&#8230;</string>
	<string name="add_spot_loading_error">Une erreur est survenue pendant l\'ajout du spot!</string>
	<string name="add_spot_loading_error_log">Exception in insertSpot service</string>

	<!-- SpotActivity -->
	<string name="drawerlayout_update_user_success">Mise à jour du profil réussi</string>
	<string name="drawerlayout_update_user_error">Le profil n\'a pas pu être mis à jour!</string>
	<string name="drawerlayout_update_user_error_log">Exception in updateUsers service</string>

	<!-- SpotActivity -->
	<string name="menu_spot_fav">Favoris</string>
	<string name="menu_spot_share">Partager</string>
	<string name="menu_spot_stview">Street View</string>
	<string name="menu_spot_nav">Navigation</string>
	<string name="menu_spot_vote">Voter</string>
	
	<string name="spot_already_comment_error">Vous avez déjà commenté ce spot!</string>
	<string name="spot_comment_delete">Voulez vous supprimer ce commentaire?</string>
	<string name="spot_comment_"></string>
	
	<string name="spot_already_vote_error">Vous avez déjà voté ce spot!</string>
	
    <string name="spot_loading_comment_error">Une erreur est survenue pendant la récupération des commentaires! Nouveau chargement en cours&#8230;</string>
    <string name="spot_loading_comment_error_log">Exception in listComments service</string>
    
    <!-- TODO voir comment alléger les string avec une sélection du premier mot selon l'action -->
	<string name="spot_add_comment">Ajout du commentaire&#8230;</string>
	<string name="spot_add_comment_error">Le commentaire n\'a pas pu être ajouté!</string>
	<string name="spot_add_comment_error_log">Exception in insertComments service</string>
	<string name="spot_delete_comment">Suppression du commentaire&#8230;</string>
	<string name="spot_delete_comment_error">Le commentaire n\'a pas pu être supprimé!</string>
	<string name="spot_delete_comment_error_log">Exception in removeComments service</string>
	<string name="spot_update_comment">Mise à jour du commentaire&#8230;</string>
	<string name="spot_update_comment_error">Le commentaire n\'a pas pu être mis à jour!</string>
	<string name="spot_update_comment_error_log">Exception in updateComments service</string>
	
	<string name="spot_add_favorite">Ajouter aux favoris</string>
	<string name="spot_add_favorite_error">Le favoris n\'a pas pu être ajouté!</string>
	<string name="spot_add_favorite_error_log">Exception in addFavorite service</string>
	
	<string name="spot_delete_favorite">Retirer des favoris</string>
	<string name="spot_delete_favorite_error">Le favoris n\'a pas pu être retiré!</string>
	<string name="spot_delete_favorite_error_log">Exception in removeFavorite service</string>
	
	<string name="spot_add_score">Ajouter un vote</string>
	<string name="spot_add_score_error">Le vote n\'a pas pu être pris en compte!</string>
	<string name="spot_add_score_error_log">Exception in addScore service</string>
    
	<string name="add_comment_item_text">Ajouter un commentaire</string>
	
	<string name="image_content_description"></string>
	
	<string name="vote_moins">Vote moins</string>
	<string name="vote_plus">Vote plus</string>
	
	<string name="add_comment_text">Entrer votre commentaire</string>
	
	<string name="icon_url">http://www.tehkseven.net/300-icons-103164/</string>
	
	<string name="info_vote_text">Attention vous ne pouvez voter qu\'une seule fois par spot !</string>
	<string name="info_vote_text_remove">Ne plus me montrer ce message de merde !</string>
	
</resources>
