<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:ridemyspot="http://schemas.android.com/apk/res-auto"  >
	<item
		android:id="@+id/menu_map"
		ridemyspot:showAsAction="ifRoom|withText"
		android:title="@string/menu_list_map"
		android:icon="@drawable/ic_action_map"
		/>
	<item
		android:id="@+id/menu_sort"
		ridemyspot:showAsAction="ifRoom|withText"
		android:title="@string/menu_list_sort"
		android:icon="@drawable/ic_action_sort_by_size"
		android:onClick="showSortList"
		>
			<menu>
	            <item
	                android:id="@+id/menu_sort_name"
	                android:showAsAction="ifRoom"
	                android:title="@string/string_sort_name"/>
	            <item
	                android:id="@+id/menu_sort_note"
	                android:showAsAction="ifRoom"
	                android:title="@string/string_sort_note"/>
	            <item
	                android:id="@+id/menu_sort_nb_note"
	                android:showAsAction="ifRoom"
	                android:title="@string/string_sort_nb_note"/>
	            <item
	                android:id="@+id/menu_sort_distance"
	                android:showAsAction="ifRoom"
	                android:title="@string/string_sort_distance"/>
	            <item
	                android:id="@+id/menu_sort_fav"
	                android:showAsAction="ifRoom"
	                android:title="@string/string_sort_fav"/>
	        </menu>
		</item>
</menu>
