<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_content_description"
        android:scaleType="fitXY"
        android:src="@drawable/background"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/image_content_description"
        android:src="@drawable/big_logo" />

    <Button
        android:id="@+id/buttonRideMySpot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/splashscreen_rms_button"
        />

    <Button
        android:id="@+id/buttonAlreadySignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonRideMySpot"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/splashscreen_already_button"
        />

    <TextView
        android:id="@+id/textViewLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/splashscreen_text"
        android:textSize="20sp"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/progressBarLoading"
        style="?android:attr/progressBarStyleInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewLoading"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

</RelativeLayout>