<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:layout_margin="20dp">

    <LinearLayout
        android:id="@+id/disclaimer_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:id="@+id/disclaimer_header_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:textSize="30sp"
            android:text="@string/text_disclaimer"/>
    </LinearLayout>

    <Button
        android:id="@+id/disclaimer_validate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/text_valider"/>

    <ScrollView
        android:id="@+id/disclaimer_scrollview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:layout_below="@id/disclaimer_header"
        android:layout_above="@id/disclaimer_validate">


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="20dp">
            <TextView
                android:id="@+id/disclaimer_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/text_next"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>